pkg/lang/syntax/testdata/ub/validate/invalid/lock/version.ub
lock: {
  version: 2
  toolchain: {
    unobin-version: 'v0.4.2'
  }
  deps: {}
}
